--- a/src/Pages/404/404_styles_web.scss
+++ b/src/Pages/404/404_styles_web.scss
@@ -2,29 +2,29 @@
   .not-found--main {
     max-width: 1086px;
     width: 100%;
-    @include prefixflex();
+    // @include prefixflex();
     justify-content: center;
     align-items: flex-start;
     & .not-found--container {
-      @include prefixflex();
+      // @include prefixflex();
       justify-content: flex-start;
       align-items: center;
       flex-direction: column;
       margin-top: 5em;
       & .not-found__title {
-        @include prefixflex();
+        // @include prefixflex();
         justify-content: center;
         align-items: center;
         width: 100%;
         & .title--icon {
-          @include prefixflex();
+          // @include prefixflex();
           justify-content: center;
           align-items: center;
           height: 10em;
           width: 10em;
-          background-color: $p-red;
+          // background-color: $p-red;
           & span {
-            color: $p-white;
+            // color: $p-white;
             font-size: 10em;
             line-height: 1em;
           }
@@ -34,14 +34,14 @@
         }
       }
       & .not-found__body {
-        @include prefixflex();
+        // @include prefixflex();
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
         height: 20em;
         padding-top: 5em;
         & h5 {
-          color: $p-blue;
+          // color: $p-blue;
         }
       }
       & .not-found_home-btn {
@@ -50,11 +50,11 @@
           height: 3.125em;
           width: 10.93em;
           border: none;
-          color: $p-white;
-          background-color: $p-red;
+          // color: $p-white;
+          // background-color: $p-red;
           font-size: 1.6em;
           font-weight: 400;
-          font-family: $p-font;
+          // font-family: $p-font;
           cursor: pointer;
           box-shadow: 3px 3px 3px rgba(0,0,0,.25);
         }
